# CodeSnippet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  main.cpp  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
advent_code_2024/: 01.h  02.h  03.h  04.h  05.h  06.h  07.cpp  07.h  08.h  09.h  10.h  11.h  12.h  17.h  CMakeLists.txt  main.cpp  util.cpp  util.h
bench/: CMakeCache.txt  CMakeLists.txt  bench_main.cpp  safe_vector_bench.cpp
container/: CMakeLists.txt  bi_tree_printer.cpp  bi_tree_printer.h  bi_tree_printer_test.cpp  binary_tree.cpp  binary_tree.h  falgo.cpp  falgo.h  falgo_bench.cpp  falgo_test.cpp  safe_vector.h  safe_vector_bench.cpp  sync_pool.h  sync_pool_bench.cpp  sync_pool_test.cpp
coro/: CMakeLists.txt  coro_run.cpp  example_1.h  example_2.h  example_3.h  example_4.h  example_5.h  example_6.h  example_7.h  example_8.h  executor.h  result.h
coro_util/: CMakeLists.txt  coro_run.cpp  example_1.h  example_2.h  example_3.h  example_4.h  example_5.h  example_6.h  example_7.h  executor.h
file_ops/: FileOps.cpp  FileOps.h
func_cache/: CMakeLists.txt
mem_management/: CMakeLists.txt  sync_pool.cpp  sync_pool.h
op_file/: CMakeLists.txt  FileOps.cpp  FileOps.h  FileOps_test.cpp
op_func/: CMakeLists.txt  func_cache.h  func_decerator.h  scope_guard.cpp  scope_guard.h  scope_guard_test.cpp
op_io/: CMakeLists.txt  main.cpp  uring_cat.cpp
op_proc/: CMakeLists.txt  cmd_util.cpp  cmd_util.h  cmd_util_test.cpp  main_process.cpp  new_process.cpp  proc_util.cpp  proc_util.h  proc_util_test.cpp
op_str/: CMakeLists.txt  StringSearch.cpp  StringSearch_test.cpp  string_search.cpp  string_search.h  string_search_test.cpp  string_split.cpp  string_split.h  string_split_bench.cpp  string_split_test.cpp
static_reflect/: CMakeLists.txt  declarative_struct.h  static_reflect_test.cpp
test/: CMakeLists.txt  FileOps_test.cpp  test_common.h  test_main.cpp
test/module_test/: CMakeLists.txt  hello.cpp  main.cpp
thread_pool/: CMakeLists.txt  SafeQueue.h  ThreadPool.h  example.cpp  safe_queue.h  thread_pool.h
timer/: CBTimer.cpp  CBTimer.h  CMakeLists.txt  TimerBase.h  callback_timer.cpp  callback_timer.h  timer_base.h  timer_decorator.h  timer_run.cpp
util/: CMakeLists.txt  README.md  simple_log.cpp  simple_log.h
